--- a/index.html
+++ b/index.html
@@ -3,11 +3,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stykesheet" type="text/css" href="./resources/style.css">
+    <link rel="stylesheet" type="text/css" href="resources/style.css">
     <title>Document</title>
 </head>
 <body>
+    <header>Discover hidden places in the world around you</header>
+
+    <p>Download Excursion (Coming soon!)</p>
     
+    <video autoplay muted loop>
+        <source src="resources/images/iphoneting.mp4" type="video/mp4">
+    </video>
+
+    <h1>Your personal travel guide</h1>
+    
+    <h2>Excursion remembers places you like, and recommends new points of interest around you.</h2>
+
+    <img src="resources/images/campimage2.jpg" alt="campsite image">
+
+    <br>
+
+    <img src="resources/images/phoneemoji.png" alt="emoji of phone">
+
+    <h1>Coming Soon for iPhone and Android</h1>
+
+    <p>Download Excursion (Coming soon!)</p>
+
+    <footer>© Excursion</footer>
 </body>
 </html>
 
